--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -9,4 +9,4 @@ spring.main.allow-circular-references=true
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_IP:localhost}:${EUREKA_SERVER_PORT:8761}/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
-spring.main.allow-circular-references to true.
+spring.main.allow-circular-reference=true.
